# Team3_Project2_Xarm_ActionsServices_Starter

./: .gitignore  Readme.md
Proj2-env/: pyvenv.cfg
Project2_ws/Proj2-env/: pyvenv.cfg
Project2_ws/src/xarm_nodes/launch/: project2.launch.py  project2_launch.py  project2_launch.py.save
Project2_ws/xarm_nodes/: package.xml  setup.py  usb_cam_params.yaml
Project2_ws/xarm_nodes/launch/: project2.launch.py
Project2_ws/xarm_nodes/xarm_nodes/: action_client_node.py  arduino.py  camera_node.py  drive_pickup.py  motor_commands.py  pickup_gui.py  retrieve_items_action_server.py  service_client.py  x_arm_hardware_node.py
Project2_ws/xarm_pickup_interfaces/: CMakeLists.txt  package.xml
Project2_ws/xarm_pickup_interfaces/srv/: GetGripperPosition.srv  MoveGraspedToDeposit.srv  MoveToCell.srv  ServoOff.srv  SetGripper.srv
