<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_nodes</name>
  <version>0.0.0</version>
  <description>Hardware node skeleton for Xarm student projects.</description>
  <maintainer email="laptopuser@todo.todo">laptopuser</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>xarm_pickup_interfaces</depend>
  <exec_depend>cv_bridge</exec_depend> #for camera
  <exec_depend>sensor_msgs</exec_depend> #for camera
  <exec_depend>python3-xarm</exec_depend>

  <test_depend>ament_copyright</test_depend> #for camera
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
